# web4_landing

./: Cargo.toml  README.md  justfile  mise.toml  rust-toolchain.toml  rustfmt.toml
client/: index.ts
scripts/: setup.sh
src/: lib.rs  routes.rs
src/common/: config.rs  web4.rs
src/common/types/: mod.rs  props.rs
src/layout/: style.css
src/routes/: error_404.rs  index.html  layout.rs  mod.rs  page.rs
test/: client.ts  server.ts  web4_get-args.json  web4_get.ts
