# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "web4_landing"
version = "0.1.0"
edition = "2021"


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true


[lib]
crate-type = ["cdylib"]


[dependencies]
near-sdk = "4.0.0-pre.7"


[dev-dependencies]
borsh = "*"
near-sdk = { version = "5.8.1", features = ["unit-testing"] }
#? No aarch64 support :(
# near-workspaces = { version = "0.16", features = ["unstable"] }
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-abi = "0.4.0"
zstd = "0.13"
